# AetherOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md
compiler/: Cargo.toml
docs/: AETHEROS_BLUEPRINT_V1.md  ANDROID_PORTING.md  BLUEPRINT_v1.0.md  BSP_GUIDE.md  DISTRIBUTION_CHANNELS.md  DRIVER_PARTNERSHIP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_v1.1.md  IPHONE_PORTING.md  LAUNCH_CHECKLIST.md  OUTREACH_ISSUES.md  PALA_VERIFICATION.md  (+9 more)
kernel/: Cargo.toml  build.rs  build_bin_log.txt  build_bin_log_2.txt  build_bin_log_3.txt  build_generic_arm_log.txt  build_generic_arm_log_2.txt  build_generic_arm_log_3.txt  build_output.txt  build_x86_log.txt  build_x86_log_2.txt  build_x86_log_3.txt  build_x86_log_4.txt  link.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  panic.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.S  boot.rs  context.rs  exceptions.rs  mod.rs
kernel/src/arch/x86_64/: boot.rs  context.rs  mod.rs
kernel/src/bus/: mod.rs  quantum_bus.rs
kernel/src/drivers/: dtb.rs  mod.rs
kernel/src/drivers/irq/: gic400.rs  mod.rs
kernel/src/drivers/serial/: pl011.rs
kernel/src/drivers/timer/: arm_generic.rs  mod.rs
kernel/src/hal/: mod.rs  rpi.rs  stub.rs  x86_64.rs
kernel/src/hal/rpi/: gic.rs  gpio.rs  timer.rs  uart.rs
kernel/src/memory/: mmu.rs  mod.rs  paging.rs  smme.rs
kernel/src/oracle/: mod.rs
kernel/src/scheduler/: active_objects.rs  mod.rs
kernel/src/testing/: mod.rs
kernel/src/ui/: display.rs  mod.rs
kernel/src/virt/: mod.rs
(+21 files in other folders)
