[package]
name = "aetheros-kernel"
version = "1.4.0"
edition = "2021"

[dependencies]
# No external dependencies for microkernel core

[features]
default = []
ui = [] # Enable UI Engine

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[lib]
name = "aetheros_kernel"
path = "src/lib.rs"

[[bin]]
name = "aetheros-kernel"
path = "src/main.rs"
